# IA-Engineer

AI_Auditor/: .env.example  .gitignore  ENHANCED_AUDIT_MANUAL.md  LOGGING_GUIDE.md  README.md  audit.ps1  enhanced_audit.py  integrated_auditor_gui.py  main.py  pyproject.toml  requirements.txt  run_auditor.py  test_audit.py
AI_Auditor/config/: audit_config.yaml
AI_Auditor/core/: ai_detector.py  audit_analyzer.py  context_builder.py  context_ranker.py  dependency_analyzer.py  dependency_graph.py  findings_tracker.py  mcp_structure_validator.py  scoring_engine.py  static_analyzer.py  token_budget.py
AI_Auditor/docs/: ENHANCED_AUDIT_MANUAL.md  IMPLEMENTATION_PLAN.md  LOGGING_GUIDE.md  MCP_STRUCTURE_GUIDE.md  api.md  corporate_transformation_roadmap.md
AI_Auditor/docs/examples/: basic_usage.py
AI_Auditor/enhanced_findings_v3/: findings.json  roadmap.json  summary.json
AI_Auditor/llm/: llm_client.py  prompts.py  structure.py
AI_Auditor/mcp_structure/: mcp_structure_report.json
AI_Auditor/scripts/: ENTRY_POINTS_GUIDE.md
AI_Auditor/scripts/standalone/: audit.ps1  dependency_audit.py  mcp_structure_audit.py
AI_Auditor/src/: __init__.py
AI_Auditor/src/mcp_tools/: __init__.py  audit_analyzer.py  config.py  exceptions.py  logger.py  schemas.py  validators.py
AI_Auditor/test_enhanced/: findings.json  roadmap.json  summary.json
AI_Auditor/tests/: README.md  __init__.py  conftest.py  test_audit_analyzer.py  test_dependency_analyzer.py  test_mcp_tools.py
AI_Auditor/utils/: logger.py  reporter.py
audit_reports/: audit_IA_Engineer.json  audit_IA_Engineer.md
